kaufman - fixed z-index for title and subtitle

--- a/styles/style.css
+++ b/styles/style.css
@@ -231,10 +231,14 @@
 
 .section-title_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .table_theme_dark {
